--- a/src/main/resources/templates/invoice/invoice.html
+++ b/src/main/resources/templates/invoice/invoice.html
@@ -34,7 +34,13 @@
         </tr>
     </table>
 
-    <a sec:authorize="hasRole('ADMIN') or @environment.acceptsProfiles('h2')" th:href="@{'/invoices/edit/' + ${invoice.invoiceId}}" class="btn btn-warning mt-3">Edit Invoice</a>
+    <div class="d-flex align-items-center mt-3 gap-2" sec:authorize="hasRole('ADMIN') or @environment.acceptsProfiles('h2')">
+        <a th:href="@{'/invoices/edit/' + ${invoice.invoiceId}}"
+           class="btn btn-warning">Edit Invoice</a>
+        <form th:action="@{'/invoices/delete/' + ${invoice.invoiceId}}" method="post">
+            <button type="submit" class="btn btn-danger">Delete Invoice</button>
+        </form>
+    </div>
 </main>
 </body>
 </html>
