--- a/src/main/resources/templates/lawsuit/lawsuit.html
+++ b/src/main/resources/templates/lawsuit/lawsuit.html
@@ -62,6 +62,13 @@
         </tbody>
     </table>
 
+    <div th:if="${hasPdf}">
+        <a th:href="@{'/lawsuits/download/' + ${lawsuit.lawsuitId}}" class="btn btn-success">Download Lawsuit PDF</a>
+    </div>
+    <div th:if="${!hasPdf}">
+        <span>No PDF available for download</span>
+    </div>
+
     <div class="d-flex align-items-center mt-3 gap-2" sec:authorize="hasRole('ADMIN') or @environment.acceptsProfiles('h2')">
         <a th:href="@{'/lawsuits/edit/' + ${lawsuit.lawsuitId}}"
            class="btn btn-warning">Edit Lawsuit</a>
