Added erd to homepage.

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -23,12 +23,9 @@
         <li><strong>Hearing Scheduling:</strong> Schedule and manage hearings for lawsuits.</li>
         <li><strong>Invoice Management:</strong> Generate and track invoices for legal services.</li>
         <li><strong>Lawyer Assignment:</strong> Assign lawyers dynamically and view current assignments.</li>
-        <li><strong>Unit Testing:</strong> Ensure system reliability through unit tests.</li>
-        <li><strong>API Documentation:</strong> Use Swagger for documenting APIs.</li>
         <li><strong>Entity Relationship Diagram (ERD):</strong> Visual representation of the database schema.</li>
         <li><strong>Data Validation:</strong> Use field-level validation to ensure data integrity.</li>
         <li><strong>Error Handling:</strong> Provide meaningful error messages to users.</li>
-        <li><strong>Postman Collection:</strong> Shareable API request collection for testing.</li>
     </ul>
 
     <h3 class="mt-4">Core Features</h3>
@@ -93,6 +90,10 @@
                 </div>
             </div>
         </div>
+    </div>
+
+    <div class="mw-100 d-flex justify-content-center mt-4 mb-4">
+        <img src="https://raw.githubusercontent.com/stefanoprea02/Legal-Management-System/refs/heads/main/LegalMangementSystemERD.drawio.png"  alt="erd"/>
     </div>
 </main>
 </body>
